--- a/home/banner-goods.html
+++ b/home/banner-goods.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/banner-goods.css">
 </head>
 <body>
-    <div class="banner">
+    <div class="banner-goods">
         <div class="top">
             <div class="logo">
                 <img src="assets/img/logo.png" alt="">
@@ -88,21 +88,21 @@
         </div>
         <div class="bottom">
             <img src="assets/img/bottom.png" alt="">
-            <ul class="layer">
+            <ul class="layer layer1">
                 <li><img src="assets/img/l1.jpg" alt=""></li>
                 <li><img src="assets/img/l2.jpg" alt=""></li>
                 <li><img src="assets/img/l3.jpg" alt=""></li>
                 <li><img src="assets/img/l4.jpg" alt=""></li>
                 <li><img src="assets/img/l5.jpg" alt=""></li>
             </ul>
-            <ul class="layer layer2">
+            <ul class="layer layer1">
                 <li><img src="assets/img/l6.jpg" alt=""></li>
                 <li><img src="assets/img/l7.jpg" alt=""></li>
                 <li><img src="assets/img/l8.jpg" alt=""></li>
                 <li><img src="assets/img/l9.jpg" alt=""></li>
                 <li><img src="assets/img/l10.jpg" alt=""></li>
             </ul>
-            <ul class="layer layer3">
+            <ul class="layer layer2">
                 <li><img src="assets/img/l11.jpg" alt=""></li>
                 <li><img src="assets/img/l12.jpg" alt=""></li>
                 <li><img src="assets/img/l13.jpg" alt=""></li>
