--- a/home/banner.html
+++ b/home/banner.html
@@ -10,43 +10,6 @@
     <div class="banner-box">
         <div class="banner-img">
             <div class="banner">
-                <div class="banner-top">
-                    <ul class="nav">
-                        <li>
-                            <a href="" class="text-none">全部商品分类</a>
-                        </li>
-                        <li>
-                            <a href="" class="text-none">首页</a>
-                        </li>
-                        <li>
-                            <a href="" class="text-none">食品特产</a>
-                        </li>
-                        <li>
-                            <a href="" class="text-none">服装城</a>
-                        </li>
-                        <li>
-                            <a href="" class="text-none">家用电器</a>
-                        </li>
-                        <li>
-                            <a href="" class="text-none">鞋靴箱包</a>
-                        </li>
-                        <li>
-                            <a href="" class="text-none">聚划算</a>
-                        </li>
-                        <li>
-                            <a href="" class="text-none">预售</a>
-                        </li>
-                        <li>
-                            <a href="" class="text-none">店铺街</a>
-                        </li>
-                        <li>
-                            <a href="" class="text-none">品牌专区</a>
-                        </li>
-                        <li>
-                            <a href="" class="text-none">公告</a>
-                        </li>
-                    </ul>
-                </div>
                 <div class="banner-bottom">
                     <div class="banner-left">
                         <div class="banner-left-div">
@@ -140,7 +103,11 @@
                                 <img src="assets/img/avatar.png" alt="">
                             </div>
                             <h3>Hi，欢迎来到大商创！</h3>
-                            <div class="banner-login_loginbar">
+                            <div class="btn-box">
+                                <button class="btn-left">请登录</button>
+                                <button class="btn-right">我要开店</button>
+                            </div>
+                            <!-- <div class="banner-login_loginbar">
                                 <p>
                                     <a href="" class="text-none">请登录</a>
                                 </p>
@@ -149,7 +116,7 @@
                                 <p>
                                     <a href="" class="text-none">我要开店</a>
                                 </p>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="banner-right_center">
                             <div class="banner-right_title1">
