--- a/home/header.html
+++ b/home/header.html
@@ -9,6 +9,23 @@
 </head>
 <body>
     <header>
+        <div class="header-top">
+            <div class="head-top">
+                <ul class="site-left">
+                    <li><a href=""><img src="assets/img/hong.jpg" alt=""></a></li>
+                    <li class="qin"><a href="">秦皇岛市</a></li>
+                    <li><a href="" class="se">请登入</a></li>
+                    <li><a href="">免费注册</a></li>
+                </ul>
+                <ul class="site-right">
+                    <li><a href="">我的订单</a></li>
+                    <li><a href="">我的浏览</a></li>
+                    <li><a href="">我的收藏</a></li>
+                    <li><a href="">客服服务</a></li>
+                    <li><a href="">网站东航<span class="tu-biao">^</span></a></li>
+                </ul>
+            </div>
+        </div>
         <div class="header-box">
             <div class="header-left">
                 <a href="">
@@ -16,21 +33,6 @@
                 </a>
             </div>
             <div class="header-right">
-                <div class="head-top">
-                    <ul class="site-left">
-                        <li><a href=""><img src="assets/img/hong.jpg" alt=""></a></li>
-                        <li class="qin"><a href="">秦皇岛市</a></li>
-                        <li><a href="" class="se">请登入</a></li>
-                        <li><a href="">免费注册</a></li>
-                    </ul>
-                    <ul class="site-right">
-                        <li><a href="">我的订单</a></li>
-                        <li><a href="">我的浏览</a></li>
-                        <li><a href="">我的收藏</a></li>
-                        <li><a href="">客服服务</a></li>
-                        <li><a href="">网站东航<span class="tu-biao">^</span></a></li>
-                    </ul>
-                </div>
                 <div class="head-bottom">
                     <div class="bot-left">
                         <form action="" class="biao-dan">
