--- a/home/model.html
+++ b/home/model.html
@@ -154,7 +154,7 @@
                    <p>4001-021-758</p>
                </div>
                <div class="top-lie">
-                   <img src="assets/img/tu7.jpg" alt=""  class="txex-img">
+                   <img src="assets/img/maike.jpg" alt=""  class="txex-img">
                    <p>咨询客服</p>
                </div>
            </div>
